# nMonitor

./: LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  nmonitor.1
src/: .main.c.swp  Makefile.am  Makefile.in  amdparse.h  amdparse.l  cpuinfo.c  cpuinfo.h  draw.c  draw.h  graph.c  intelparse.l  list.c  list.h  main.c  modelparse.h  msr.c  msr.h
tests/: Makefile.am  Makefile.in  check_list.c
